# rust-wasm-llm

./: .gitignore  BROWSER_DEMO_READY.md  BROWSER_STATUS.md  BROWSER_TESTING.md  Cargo.toml  Cargo.toml.original  DOCS_INDEX.md  EXTRACTION_SUMMARY.md  GETTING_STARTED.md  LICENSE-APACHE  LICENSE-MIT  README.md  WASM_FIXES_REQUIRED.md  WEBGPU_FINAL_SUMMARY.md  WEBGPU_IMPLEMENTATION_PLAN.md  WEBGPU_IMPLEMENTATION_STATUS.md  WEBGPU_MATMUL_IMPLEMENTATION.md  WEBGPU_SUMMARY.md  WSL_SETUP.md  build-wasm.sh  setup.sh  test.html
.cargo/: config.toml
.claude/: settings.local.json
candle-webgpu-demo/: Cargo.toml  README.md  build-wasm.sh  index.html
candle-webgpu-demo/src/: lib.rs
src/: lib.rs  test_candle.rs
src/llm/: config.rs  mod.rs  phi_model.rs  sampler.rs  tokenizer_wrapper.rs
src/rag/: chunking.rs  embeddings.rs  mod.rs  pipeline.rs  retrieval.rs  vector_db.rs
src/storage/: cache.rs  indexeddb.rs  mod.rs
src/utils/: file_parser.rs  mod.rs  quantization.rs
